2011-07-13  Roland Levillain  <roland@lrde.epita.fr>

	Exercise breadth-first thinning with predicate is_not_1d_isthmus.

	* apps/generic-skel/image3d-skel-with-1d-isthmuses.cc: New.
	* apps/generic-skel/Makefile.am (bin_PROGRAMS):
	Add image3d-skel-with-1d-isthmuses.
	(image3d_skel_with_1d_isthmuses_SOURCES): New.
	(TESTS): Add image3d-skel-with-1d-isthmuses.
	(MOSTLYCLEANFILES): Add
	image3d-skel-with-1d-isthmuses-input.raw,
	image3d-skel-with-1d-isthmuses-input.vtk,
	image3d-skel-with-1d-isthmuses-skel.raw and
	image3d-skel-with-1d-isthmuses-skel.vtk.

2011-07-13  Roland Levillain  <roland@lrde.epita.fr>

	Add a non 1D isthmus predicate for (2D and 3D) binary images.

	* mln/topo/is_not_1d_isthmus.hh: New.
	* headers.mk, tests/unit_test/unit-tests.mk: Regen.

2011-07-12  Roland Levillain  <roland@lrde.epita.fr>

	Check the consistency of tools/simple_point3d_lut_26_6.hh.

	* tools/simple_point3d_lut_26_6.cc: New.
	* tools/test_simple_point3d_lut_26_6.cc: New.
	* tools/tools.mk (AM_CPPFLAGS): Add -I$(top_builddir)/milena.
	* tools/Makefile.am (noinst_LTLIBRARIES): New.
	Add libsimple_point3d_lut_26_6.la.
	(libsimple_point3d_lut_26_6_la_SOURCES): New.
	(EXTRA_PROGRAMS): Add test_simple_point3d_lut_26_6.
	(test_simple_point3d_lut_26_6_SOURCES)
	(test_simple_point3d_lut_26_6_LDADD):
	New.

2011-07-12  Roland Levillain  <roland@lrde.epita.fr>

	Fix and improve the (fast) computation of 2D connectivity numbers.

	* mln/topo/is_simple_2d.hh (mln::connectivity_number_2d): Create
	the configuration number by considering that the first (resp.
	last) neighbors (in the forward browsing order) represent the
	least (resp. most) significant bits of the configuration number,
	as does the algorithm that computed the 8-c and 4-c LUTs (arrays
	mln::connectivity_number_c8 and mln::connectivity_number_c4).
	* mln/topo/connectivity_number_2d.hh: New.
	* mln/topo/is_simple_point2d.hh: Fix dates in copyright header.
	* tests/topo/connectivity_numbers_2d.cc: New.